added styling for mobile and tablet

--- a/Learnhall/CSS/Become-tutor.css
+++ b/Learnhall/CSS/Become-tutor.css
@@ -30,6 +30,24 @@
     background-color: #C04C40;
     border: none;
 }
+.brown-circle{
+    display: none;
+}
+.blue-circle{
+    display: none;
+}
+.orange-circle{
+    display: none;
+}
+.brown-circle-1{
+    display: none;
+}
+.blue-circle-1{
+    display: none;
+}
+.orange-circle-1{
+    display: none;
+}
 
 
 /**********************
@@ -45,9 +63,9 @@
         height: 587px;
     }
     .become-tutor .mdl-background{
-        margin-top: 154px;
+        margin-top: 134px;
         right: 115px;
-        height: 590px;
+        height: 610px;
     }
     .become-tutor .mdl{
         right: 0;
@@ -72,9 +90,10 @@
         height: 60px;
         font-size: 20px;
         font-weight: 700;
-        background-color: #C04C40;
-        border: none;
         border-radius: 8px;
+    }
+    .become-tutor .text .small-text{
+        display: none;
     }
 }
 
@@ -84,46 +103,47 @@
 **********************/
 @media only screen and (min-width: 960px) and (max-width: 1440px){
     .become-tutor .img .background-img{
-        height: 800px;
+        height: 690px;
     }
     .become-tutor .brown-background{
-        margin-top: 48px;
+        margin-top: 68px;
         width: 400px;
-        height: 417px;
+        height: 447px;
     }
     .become-tutor .mdl-background{
-        margin-top: 90px;
+        margin-top:115px;
         right: 70px;
-        height: 420px;
+        height: 480px;
         width: 400px;
     }
     .become-tutor .mdl{
         right: 0;
-        margin-top: 104px;
-        width: 520px;
+        margin-top: 95px;
+        width: 557px;
+        height: 500px;
     }
     .become-tutor .text{
-        margin-top: 139px;
+        margin-top: 145px;
     }
     .become-tutor .text h2{
-        width: 526px;
-        font-size: 60px;
+        width: 436px;
+        font-size: 50px;
         height: 135px;
     }
     .become-tutor .text p{
-        margin-top: 50px;
-        width: 482px;
+        margin-top: 15px;
+        width: 395px;
         font-size: 20px;
     }
     .become-tutor .text button{
-        margin-top: 80px;
-        width: 215px;
-        height: 60px;
-        font-size: 20px;
-        font-weight: 700;
-        background-color: #C04C40;
-        border: none;
+        font-size: 18px;
+        margin-top: 35px;
+        width: 188px;
+        height: 48px;
         border-radius: 8px;
+    }
+    .become-tutor .text .small-text{
+        display: none;
     }
 }
 
@@ -132,7 +152,120 @@
 ******* Tablet ********
 **********************/
 @media only screen and (min-width: 576px) and (max-width: 960px){
-
+    .become-tutor {
+        display: flex;
+        justify-content: center;
+    }
+    .become-tutor .img {
+        display: flex;
+        justify-content: center;
+        position: absolute;
+        width: 100%;
+        padding-bottom: 50px;
+        height: 800px;
+    }
+    .become-tutor .img .background-img{
+        display: none;
+    }
+    .become-tutor .brown-background{
+        display: none;
+    }
+    .become-tutor .mdl-background{
+        margin-top:380px ;
+        height: 330px;
+        width:300px;
+        position: relative;
+       }
+    .become-tutor .mdl{
+        margin-top: 370px;
+        width: 415px;
+        height: 340px;
+    }
+    .become-tutor .text{
+        margin-top: 95px;
+        text-align: center;
+        margin: auto;
+        width: 450px;
+        position: relative;
+    }
+    .become-tutor .text h2{
+        width: 436px;
+        font-size: 40px;
+        height: 135px;
+    }
+    .become-tutor .text p{
+        display: none;
+    }
+    .become-tutor .text .small-text{
+        display: flex;
+        margin-top: 5px;
+        width: 450px;
+        font-size: 18px;
+        margin: auto;
+    }
+    .become-tutor .text button{
+        font-size: 16px;
+        margin-top: 68px;
+        width: 168px;
+        height: 40px;
+        margin-top: 45px;
+        border-radius: 5px;
+    }
+    .become-tutor .img .brown-circle{
+        display: flex;
+        width: 18px;
+        height: 18px;
+        margin-top: 350px;
+        margin-right: 343px;
+        position: absolute;
+    }
+    .become-tutor .img .blue-circle{
+        display: flex;
+        width: 18px;
+        height: 18px;
+        margin-top: 355px;
+        margin-right: 283px;
+        position: absolute;
+    }
+    .become-tutor .img .orange-circle{
+        display: flex;
+        width: 18px;
+        height: 18px;
+        margin-top: 380px;
+        margin-right: 333px;
+        position: absolute;
+    }
+    .become-tutor .img .brown-circle-1{
+        display: flex;
+        width: 18px;
+        height: 18px;
+        margin-top: 723px;
+        margin-left: 410px;
+        position: absolute;
+    }
+    .become-tutor .img .blue-circle-1{
+        display: flex;
+        width: 18px;
+        height: 18px;
+        margin-top: 717px;
+        margin-left: 347px;
+        position: absolute;
+    }
+    .become-tutor .img .orange-circle-1{
+        display: flex;
+        width: 18px;
+        height: 18px;
+        margin-top: 693px;
+        margin-left: 400px;
+        position: absolute;
+    }
+    .become-tutor .orange-img2{
+        position: absolute;
+        width: 80px;
+        height: 160px;
+        right: 0;
+        margin-top: 710px;
+    }
 }
 
 
@@ -140,5 +273,119 @@
 ******* Mobile ********
 **********************/
 @media only screen and (max-width: 576px){
-
+    .become-tutor {
+        display: flex;
+        justify-content: center;
+    }
+    .become-tutor .img {
+        display: flex;
+        justify-content: center;
+        position: absolute;
+        width: 100%;
+        padding-bottom: 50px;
+        height: 800px;
+    }
+    .become-tutor .img .background-img{
+        display: none;
+    }
+    .become-tutor .brown-background{
+        display: none;
+    }
+    .become-tutor .mdl-background{
+        margin-top:270px ;
+        height: 215px;
+        width:195px;
+        position: relative;
+       }
+    .become-tutor .mdl{
+        margin-top: 260px;
+        width: 250px;
+        height: 225px;
+    }
+    .become-tutor .text{
+        margin-top: 95px;
+        text-align: center;
+        margin: auto;
+        width: 100%;
+        position: relative;
+    }
+    .become-tutor .text h2{
+        width: 236px;
+        font-size: 26px;
+        height: 80px;
+        display: flex;
+        margin: auto;
+    }
+    .become-tutor .text p{
+        display: none;
+    }
+    .become-tutor .text .small-text{
+        display: flex;
+        margin-top: 2px;
+        width: 250px;
+        font-size: 14px;
+        margin: auto;
+    }
+    .become-tutor .text button{
+        font-size: 14px;
+        margin-top: 28px;
+        width: 158px;
+        height: 30px;
+        border-radius: 5px;
+    }
+    .become-tutor .img .brown-circle{
+        display: flex;
+        width: 14px;
+        height: 14px;
+        margin-top: 248px;
+        margin-right: 230px;
+        position: absolute;
+    }
+    .become-tutor .img .blue-circle{
+        display: flex;
+        width: 14px;
+        height: 14px;
+        margin-top: 250px;
+        margin-right: 180px;
+        position: absolute;
+    }
+    .become-tutor .img .orange-circle{
+        display: flex;
+        width: 14px;
+        height: 14px;
+        margin-top: 273px;
+        margin-right: 220px;
+        position: absolute;
+    }
+    .become-tutor .img .brown-circle-1{
+        display: flex;
+        width: 14px;
+        height: 14px;
+        margin-top: 495px;
+        margin-left: 257px;
+        position: absolute;
+    }
+    .become-tutor .img .blue-circle-1{
+        display: flex;
+        width: 14px;
+        height: 14px;
+        margin-top: 493px;
+        margin-left: 203px;
+        position: absolute;
+    }
+    .become-tutor .img .orange-circle-1{
+        display: flex;
+        width: 14px;
+        height: 14px;
+        margin-top: 470px;
+        margin-left: 247px;
+        position: absolute;
+    }
+    .become-tutor .orange-img2{
+        position: absolute;
+        width: 43px;
+        height: 90px;
+        right: 0;
+        margin-top: 515px;
+    }
 }
