--- a/Learnhall/CSS/learnhall-info.css
+++ b/Learnhall/CSS/learnhall-info.css
@@ -40,6 +40,9 @@
     text-decoration: none;
     color: #FFFFFF;
 }
+.learnhall-info-text button a:hover {
+    text-decoration: underline;
+}
 .learnhall-info-text button{
     background-color: #C04C40;
     border: #C04C40;
