adjusted class names

--- a/Learnhall/CSS/Become-tutor.css
+++ b/Learnhall/CSS/Become-tutor.css
@@ -36,22 +36,22 @@
     background-color: #C04C40;
     border: none;
 }
-.brown-circle{
+.become-tutor .brown-circle{
     display: none;
 }
-.blue-circle{
+.become-tutor .blue-circle{
     display: none;
 }
-.orange-circle{
+.become-tutor .orange-circle{
     display: none;
 }
-.brown-circle-1{
+.become-tutor .brown-circle-1{
     display: none;
 }
-.blue-circle-1{
+.become-tutor .blue-circle-1{
     display: none;
 }
-.orange-circle-1{
+.become-tutor .orange-circle-1{
     display: none;
 }
 
