--- a/Learnhall/CSS/Footer.css
+++ b/Learnhall/CSS/Footer.css
@@ -41,6 +41,25 @@ footer{
 .connect span{
     display: block;
 }
+.connect-1{
+    position: relative;
+}
+.connect-1 .img{
+    display: inline-block;
+}
+.connect-1 .img-1{
+    display: flex;
+    position: relative;
+}
+.connect-1 .img-2{
+    position: absolute;
+}
+.connect-1 .img-3{
+    position: absolute;
+}
+.connect-1 span{
+    display: block;
+}
 .info{
     display: flex;
     justify-content:right;
@@ -123,6 +142,29 @@ footer .copywrite .right{
     .connect .img{
         margin-right:17px ;
     }
+    .connect-1{
+        margin-top: 20px;
+    }
+    .connect-1 span{
+        font-size: 20px;
+    }
+    .connect-1 .img-1{
+        margin-top: 15px;
+    }
+    .connect-1 .img-2{
+        margin-top: -35px;
+        margin-left: 15px;
+    }
+    .connect-1 .img-3{
+        margin-top: -33px;
+        margin-left: 14px;
+    }
+    .connect-1 .img-3:first {
+        display: none;
+    }
+    .connect-1 .img{
+        margin-right:17px ;
+    }
     .info{
         margin-top: -254px;
     }
@@ -187,6 +229,9 @@ footer .copywrite .right{
     .connect{
         margin-top: 20px;
     }
+    .connect-1{
+        margin-top: 20px;
+    }
     .connect span{
         font-size: 18px;
     }
@@ -205,6 +250,26 @@ footer .copywrite .right{
         display: none;
     }
     .connect .img{
+        margin-right:17px ;
+    }
+    .connect-1 span{
+        font-size: 18px;
+    }
+    .connect-1 .img-1{
+        margin-top: 13px;
+    }
+    .connect-1 .img-2{
+        margin-top: -35px;
+        margin-left: 14px;
+    }
+    .connect-1 .img-3{
+        margin-top: -33px;
+        margin-left: 14px;
+    }
+    .connect-1 .img-3:first {
+        display: none;
+    }
+    .connect-1 .img{
         margin-right:17px ;
     }
     .info{
@@ -250,13 +315,13 @@ footer .copywrite .right{
 **********************/
 @media only screen and (min-width: 576px) and (max-width: 960px){
     footer{
-        height: 600px;
+        height: 500px;
         margin-top: 599px;
     }
     .logo-image-1{
         height: 38px;
         width: 38px;
-        margin-top: 190px;
+        margin-top: 320px;
     }
     .logo-image img{
         height: 38px;
@@ -267,7 +332,7 @@ footer .copywrite .right{
     .logo-text-1{
         height: 35px;
         margin-left: 5px;
-        margin-top: 190px;
+        margin-top: 320px;
         margin-bottom: 12px;
         position: absolute;
     }
@@ -278,9 +343,18 @@ footer .copywrite .right{
         margin-top: 300px;
         position: absolute;
         display: inline-block;
+        right: 140px;
+    }
+    .connect-1{
+        margin-top: 300px;
+        position: absolute;
+        justify-content: right;
+        display: inline-block;
+        right: 0px;
     }
     .connect span{
         font-size: 18px;
+        text-align: center;
     }
     .connect .img-1{
         margin-top: 13px;
@@ -299,13 +373,38 @@ footer .copywrite .right{
     .connect .img{
         margin-right:17px ; 
     }
+    .connect-1 span{
+        font-size: 18px;
+        margin-left: 10px;
+    }
+    .connect-1 .img-1{
+        margin-top: 13px;
+    }
+    .connect-1 .img-2{
+        margin-top: -35px;
+        margin-left: 14px;
+    }
+    .connect-1 .img-3{
+        margin-top: -33px;
+        margin-left: 14px;
+    }
+    .connect-1 .img-3:first {
+        display: none;
+    }
+    .connect-1 .img{
+        margin-right:17px ; 
+    }
     .info{
-        margin-top: 44px;
+        padding-top: 54px;
         margin: auto;
         justify-content: center;
         display: flex;
         width: 550px;
-        position: relative;
+        position: absolute;
+        margin-right: auto;
+        margin-left:auto ;
+        left: 0;
+        right: 0;
     }
     .info .text{
         margin-left: 45px;
@@ -328,15 +427,20 @@ footer .copywrite .right{
         font-size: 16px;
     }
     footer hr{
-        margin-top:195px ;
+        margin-top:425px ;
+        position: absolute;
     }
     footer .copywrite{
-        margin-top: 22px;
+        margin-top: 450px;
         font-size: 14px;
+        position: absolute;
+        width: 100%;
     }
     footer .copywrite .right{
         margin-top: -23px;
         padding-top: 5px;
+        position: absolute;
+        right: 0;
     }
     footer .copywrite span{
         height: 23px;
@@ -349,5 +453,153 @@ footer .copywrite .right{
 ******* Mobile ********
 **********************/
 @media only screen and (max-width: 576px){
-
+    footer{
+        height: 380px;
+        margin-top: 419px;
+    }
+    .logo-image-1{
+        height: 25px;
+        width: 25px;
+        margin-top: 260px;
+    }
+    .logo-image-1 img{
+        height: 25px;
+        width: 25px;
+        margin-bottom: 12px;
+        position: absolute;
+    }
+    .logo-text-1{
+        height: 25px;
+        margin-left: 4px;
+        margin-top: 260px;
+        margin-bottom: 12px;
+        position: absolute;
+    }
+    .logo-text-1 a{
+        font-size: 20px;
+    }
+    .connect{
+        margin-top: 265px;
+        position: absolute;
+        display: inline-block;
+        right: 65px;
+    }
+    .connect-1{
+        margin-top: 265px;
+        position: absolute;
+        justify-content: right;
+        display: inline-block;
+        right: 0px;
+    }
+    .connect span{
+        font-size: 11px;
+        text-align: center;
+    }
+    .connect .img-1{
+        margin-top: 13px;
+        width: 26px;
+        height: 26px;
+    }
+    .connect .img-2{
+        margin-top: -21px;
+        margin-left: 7px;
+    }
+    .connect .img-2 img{
+        width: 12px;
+        height: 12px;
+    }
+    .connect .img-3{
+        margin-top: -33px;
+        margin-left: 14px;
+    }
+    .connect .img-3:first {
+        display: none;
+    }
+    .connect .img{
+        margin-right:4px ; 
+    }
+    .connect-1 span{
+        font-size: 11px;
+        margin-left: 3px;
+    }
+    .connect-1 .img-1{
+        margin-top: 13px;
+        width: 26px;
+        height: 26px;
+    }
+    .connect-1 .img-2{
+        margin-top: -22px;
+        margin-left: 7px;
+    }
+    .connect-1 .img-2 img{
+        width: 12px;
+        height: 10px;
+    }
+    .connect-1 .img-3{
+        margin-top: -21px;
+        margin-left: 7px;
+    }
+    .connect-1 .img-3 img{
+        width: 12px;
+        height: 12px;
+    }
+    .connect-1 .img-3:first {
+        display: none;
+    }
+    .connect-1 .img{
+        margin-right:4px ; 
+    }
+    .info{
+        padding-top: 40px;
+        margin: auto;
+        justify-content: center;
+        display: flex;
+        width: 250px;
+        position: absolute;
+        margin-right: auto;
+        margin-left:auto ;
+        left: 0;
+        right: 0;
+       /*  background-color: aqua; */
+    }
+    .info .text{
+        margin-left: 5px;
+    }
+    .info .text:first-child{
+        margin-left: 0px;
+        margin-right: -20px;
+    }
+    .info .text ul{
+        width: 85px;
+    }
+    .info .text h4{
+        font-size: 11px;
+        margin-bottom: 8px;
+    }
+    .info .text li{
+        padding-bottom: 8px;
+    }
+    .info .text li a{
+        padding-bottom: 0px;
+        font-size: 9px;
+    }
+    footer hr{
+        margin-top:335px ;
+        position: absolute;
+    }
+    footer .copywrite{
+        margin-top: 350px;
+        font-size: 8px;
+        position: absolute;
+        width: 100%;
+    }
+    footer .copywrite .right{
+        margin-top: -14px;
+        padding-top: 5px;
+        position: absolute;
+        right: 0;
+    }
+    footer .copywrite span{
+        height: 23px;
+    }
 }
